Fix - prevent scroll when nav is open; add z-index to nav and bg-overlay

--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -150,6 +150,7 @@
     position: fixed;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.75);
+    z-index: 1000;
   }
 
   .nav-menu {
@@ -162,6 +163,7 @@
     background-color: black;
     transform: translate(100%);
     transition: transform 0.3s ease-out;
+    z-index: 1000;
 
     &[data-visible='true'] {
       transform: translate(0%);
